changes on autheritation path | PlayerTest and GameTest done